correction nav-menu color

--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ footer {
         top: 80px;
         left: 0;
         right: 0;
-        background: white;
+        background: black;
         padding: 2rem;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     }
