ajout dernier article FB v3

--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ nav {
     list-style: none; /* Supprime les puces par défaut */
     padding: 0;
     margin-top: 1.5rem; /* Espacement au-dessus de la liste */
+    margin-bottom: 2rem;
 }
 
 .training-content ul li {
@@ -389,7 +390,7 @@ nav {
 
 /* Styles pour le bouton dans la section formation */
 .training-text .btn {
-    margin-top: 3rem; /* Espacement au-dessus du bouton */
+    margin-top: 2.5rem !important; /* Espacement au-dessus du bouton */
 }
 
 /* Responsive */
@@ -693,7 +694,7 @@ select::-ms-expand {
 
 /* Ajustement du bouton "Voir toutes mes actualités" */
 .facebook-post-container .btn {
-    margin-top: 2.5rem; /* Espace entre le post et le bouton */
+    margin-top: 2.5rem !important; /* Espace entre le post et le bouton */
 }
 
 /* Responsive pour mobile */
