--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,8 @@ nav {
 }
 
 /* Responsive pour conseils */
-@media (max-width: 768px) {
+
+@media (max-width: 768px) 
     .conseils-grid {
         grid-template-columns: 1fr;
         gap: 25px;
@@ -362,7 +363,7 @@ nav {
         font-size: 1.2rem;
         padding-right: 35px;
     }
-    
+
 /* Projects Section */
 .project-grid {
     display: grid;
