--- a/css/style.css
+++ b/css/style.css
@@ -1318,7 +1318,8 @@ footer {
     text-align: center;
     padding-top: 0.5rem;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 0.8rem;
 }
 
 .made-by {
